--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kingworldjs/bearer",
   "version": "0.0.0-experimental.1",
-  "description": "A plugin for kingworld for retreiving Bearer token",
+  "description": "A plugin for Elysia for retreiving Bearer token",
   "author": {
     "name": "saltyAom",
     "url": "https://github.com/SaltyAom",
@@ -13,16 +13,16 @@
   "types": "src/index.ts",
   "typings": "src/index.ts",
   "keywords": [
-    "kingworld",
+    "elysia",
     "bearer",
     "authentication"
   ],
-  "homepage": "https://github.com/saltyaom/kingworld-bearer",
+  "homepage": "https://github.com/elysiajs/elysia-bearer",
   "repository": {
     "type": "git",
-    "url": "https://github.com/saltyaom/kingworld-bearer"
+    "url": "https://github.com/elysiajs/elysia-bearer"
   },
-  "bugs": "https://github.com/SaltyAom/kingworld-bearer/issues",
+  "bugs": "https://github.com/elysiajs/elysia-bearer/issues",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --config nodemon.json",
@@ -33,7 +33,7 @@
     "release": "npm run build && npm run test && npm publish --access public"
   },
   "peerDependencies": {
-    "kingworld": ">= 0.0.0-experimental.54"
+    "elysia": ">= 0.0.0-experimental.56"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
@@ -41,7 +41,7 @@
     "@types/node": "^18.11.7",
     "bun-types": "^0.2.2",
     "eslint": "^8.26.0",
-    "kingworld": "0.0.0-experimental.55",
+    "elysia": "0.0.0-experimental.56",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   }
