--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kingworldjs/bearer",
+  "name": "@elysiajs/bearer",
   "version": "0.0.0-experimental.1",
   "description": "A plugin for Elysia for retreiving Bearer token",
   "author": {
