--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elysiajs/bearer",
-  "version": "0.1.0-rc.6",
+  "version": "0.1.0",
   "description": "Plugin for Elysia for retreiving Bearer token",
   "author": {
     "name": "saltyAom",
