--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@types/node": "^18.11.7",
     "bun-types": "^0.2.2",
-    "elysia": "^0.3.0-rc.1",
+    "elysia": "^0.3.0",
     "eslint": "^8.26.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
