--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "@elysiajs/bearer",
-  "version": "0.5.2",
-  "description": "Plugin for Elysia for retreiving Bearer token",
-  "author": {
-    "name": "saltyAom",
-    "url": "https://github.com/SaltyAom",
-    "email": "saltyaom@gmail.com"
-  },
-  "main": "./dist/index.js",
-  "exports": {
-    "bun": "./dist/index.js",
-    "node": "./dist/cjs/index.js",
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/index.js",
-    "default": "./dist/index.js"
-  },
-  "types": "./src/index.ts",
-  "keywords": [
-    "elysia",
-    "bearer",
-    "authentication"
-  ],
-  "homepage": "https://github.com/elysiajs/elysia-bearer",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/elysiajs/elysia-bearer"
-  },
-  "bugs": "https://github.com/elysiajs/elysia-bearer/issues",
-  "license": "MIT",
-  "scripts": {
-    "dev": "bun run --hot example/index.ts",
-    "test": "bun wiptest && npm run test:node",
-    "test:node": "npm install --prefix ./test/node/cjs/ && npm install --prefix ./test/node/esm/ && node ./test/node/cjs/index.js && node ./test/node/esm/index.js",
-    "build": "rimraf dist && tsc --project tsconfig.esm.json && tsc --project tsconfig.cjs.json",
-    "release": "npm run build && npm run test && npm publish --access public"
-  },
-  "peerDependencies": {
-    "elysia": ">= 0.5.12"
-  },
-  "devDependencies": {
-    "@types/node": "^20.1.4",
-    "bun-types": "^0.5.8",
-    "elysia": "0.5.12",
-    "eslint": "^8.40.0",
-    "rimraf": "4.3.1",
-    "typescript": "^5.0.4"
-  }
+    "name": "@elysiajs/bearer",
+    "version": "0.8.0-rc.0",
+    "description": "Plugin for Elysia for retreiving Bearer token",
+    "author": {
+        "name": "saltyAom",
+        "url": "https://github.com/SaltyAom",
+        "email": "saltyaom@gmail.com"
+    },
+    "main": "./dist/index.js",
+    "exports": {
+        "bun": "./dist/index.js",
+        "node": "./dist/cjs/index.js",
+        "require": "./dist/cjs/index.js",
+        "import": "./dist/index.js",
+        "default": "./dist/index.js"
+    },
+    "types": "./src/index.ts",
+    "keywords": [
+        "elysia",
+        "bearer",
+        "authentication"
+    ],
+    "homepage": "https://github.com/elysiajs/elysia-bearer",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/elysiajs/elysia-bearer"
+    },
+    "bugs": "https://github.com/elysiajs/elysia-bearer/issues",
+    "license": "MIT",
+    "scripts": {
+        "dev": "bun run --hot example/index.ts",
+        "test": "bun test && npm run test:node",
+        "test:node": "npm install --prefix ./test/node/cjs/ && npm install --prefix ./test/node/esm/ && node ./test/node/cjs/index.js && node ./test/node/esm/index.js",
+        "build": "rimraf dist && tsc --project tsconfig.esm.json && tsc --project tsconfig.cjs.json",
+        "release": "npm run build && npm run test && npm publish --access public"
+    },
+    "peerDependencies": {
+        "elysia": ">= 0.8.0-rc.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.1.4",
+        "bun-types": "^0.5.8",
+        "elysia": "0.8.0-rc.0",
+        "eslint": "^8.40.0",
+        "rimraf": "4.3.1",
+        "typescript": "^5.0.4"
+    }
 }
