--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "@elysiajs/bearer",
-  "version": "1.0.2",
-  "description": "Plugin for Elysia for retreiving Bearer token",
-  "author": {
-    "name": "saltyAom",
-    "url": "https://github.com/SaltyAom",
-    "email": "saltyaom@gmail.com"
-  },
-  "main": "./dist/index.js",
-  "exports": {
-    "bun": "./dist/index.js",
-    "node": "./dist/cjs/index.js",
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/index.js",
-    "default": "./dist/index.js"
-  },
-  "types": "./src/index.ts",
-  "keywords": [
-    "elysia",
-    "bearer",
-    "authentication"
-  ],
-  "homepage": "https://github.com/elysiajs/elysia-bearer",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/elysiajs/elysia-bearer"
-  },
-  "bugs": "https://github.com/elysiajs/elysia-bearer/issues",
-  "license": "MIT",
-  "scripts": {
-    "dev": "bun run --hot example/index.ts",
-    "test": "bun test && npm run test:node",
-    "test:node": "npm install --prefix ./test/node/cjs/ && npm install --prefix ./test/node/esm/ && node ./test/node/cjs/index.js && node ./test/node/esm/index.js",
-    "build": "rimraf dist && tsc --project tsconfig.esm.json && tsc --project tsconfig.cjs.json",
-    "release": "npm run build && npm run test && npm publish --access public"
-  },
-  "peerDependencies": {
-    "elysia": ">= 1.0.2"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.0.4",
-    "@types/node": "^20.1.4",
-    "elysia": "1.0.2",
-    "eslint": "^8.40.0",
-    "rimraf": "4.3.1",
-    "typescript": "^5.0.4"
-  }
+    "name": "@elysiajs/bearer",
+    "version": "1.1.0",
+    "description": "Plugin for Elysia for retreiving Bearer token",
+    "license": "MIT",
+    "scripts": {
+        "dev": "bun run --watch example/index.ts",
+        "test": "bun test && npm run test:node",
+        "test:node": "npm install --prefix ./test/node/cjs/ && npm install --prefix ./test/node/esm/ && node ./test/node/cjs/index.js && node ./test/node/esm/index.js",
+        "build": "bun build.ts",
+        "release": "npm run build && npm run test && npm publish --access public"
+    },
+    "peerDependencies": {
+        "elysia": ">= 1.1.0"
+    },
+    "devDependencies": {
+        "@types/bun": "1.1.6",
+        "elysia": ">= 1.1.0-rc.2",
+        "eslint": "9.6.0",
+        "tsup": "^8.1.0",
+        "typescript": "^5.5.3"
+    },
+    "main": "./dist/cjs/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        "./package.json": "./package.json",
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.mjs",
+            "require": "./dist/cjs/index.js"
+        }
+    },
+    "keywords": [
+        "elysia",
+        "bearer",
+        "authentication"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/elysiajs/elysia-bearer"
+    },
+    "author": {
+        "name": "saltyAom",
+        "url": "https://github.com/SaltyAom",
+        "email": "saltyaom@gmail.com"
+    },
+    "homepage": "https://github.com/elysiajs/elysia-bearer",
+    "bugs": "https://github.com/elysiajs/elysia-bearer/issues"
 }
