--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
         "release": "npm run build && npm run test && npm publish --access public"
     },
     "peerDependencies": {
-        "elysia": ">= 1.4.0"
+        "elysia": ">= 1.4.3"
     },
     "devDependencies": {
-        "@types/bun": "1.1.14",
-        "elysia": "1.4.0",
-        "eslint": "9.6.0",
-        "tsup": "^8.1.0",
-        "typescript": "^5.5.3"
+        "@types/bun": "1.3.1",
+        "elysia": "1.4.13",
+        "eslint": "^9.38.0",
+        "tsup": "^8.5.0",
+        "typescript": "^5.9.3"
     },
     "main": "./dist/cjs/index.js",
     "module": "./dist/index.mjs",
